--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "app",
   "version": "0.1.0",
+  "proxy": "http://localhost:4010",
   "private": true,
   "dependencies": {
     "body-parser": "^1.18.0",
@@ -9,6 +10,7 @@
     "massive": "^4.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
   "scripts": {
